--- a/pedia.html
+++ b/pedia.html
@@ -1,8 +1,11 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Pediatrics</title><style>
+<html lang="en" data-bs-theme="dark"></html>><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"   <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>/><title>Pediatrics</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
 	-webkit-print-color-adjust: exact;
+}
 }
 * {
 	box-sizing: border-box;
